# spotcast

./: .editorconfig  .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  validate.yaml
custom_components/spotcast/: __init__.py  cast.py  const.py  error.py  helpers.py  manifest.json  sensor.py  spotcast_controller.py  spotify_controller.py
